Improved ramp color for ice mode
Added a control for wall bounce independent of surface friction
Renamed "frictionless" control to "surface"
# 1.03.40 (34937) Sep 10, 2009
forces-and-motion: Removed gravity and wall force from chart 
Made it so when the user changes kinetic friction, that static is changed so that static >= kinetic
Made it so when the user changes static friction, that kinetic is changed so that static >= kinetic
Made sim have friction by default
moving-man: Added velocity and acceleration vectors
Fixed: Position slider is buggy after implementation of position smoothing
Fixed: Return object button doesn't work when using position smoothing
Improved the location of heat button
Improved the location of return object button
# 1.03.39 (34866) Sep 4, 2009
moving-man: removed extraneous control panels
Added correlation between chart domain axes
# 1.03.38 (34811) Sep 3, 2009
9/3/09 Fixes for missing string lookups
# 1.03.37 (34809) Sep 3, 2009
Removed robot moving company standalone sim (appears in last tab)
Made it so you can drag the man character in moving man
Fixed: Some play area control panels overlap depending on aspect ratio
# 1.03.36 (34763) Sep 3, 2009
Renamed project from "the-ramp" to "motion-series"
Fixed: Ramp angle indicator blocks mouse input
Fixed: Height indicator graphic blocks mouse input
Removed blue layout debug box
Switched to screen coordinates layout
Fixed: Angle readout is too large
Fixed: Height readout is too large
# 1.03.35 (34662) Aug 31, 2009
forces-and-motion: Removed checkboxes from x,v,a chart readouts
forces-and-motion: Removed extraneous title boxes from x,v,a readouts
forces-and-motion: Added feature: Can enter values for F_applied, acceleration, velocity, position in boxes on left of graphs
forces-and-motion: Added sliders for position, velocity, acceleration
forces-and-motion: Changed so that force graph tab starts with only force graph open - acceleration, velocity, position are closed